# itsm-modern-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  bootstrap.sh  docker-compose.portainer.yml  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml  discord-release.yml  docker-publish.yml
docker/: entrypoint.sh
frontend/: .gitignore  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: login.spec.ts  navigation.spec.ts  sandbox.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  test-utils.tsx  vite-env.d.ts
migrations/: env.py  script.py.mako
migrations/versions/: 10d94fc32654_tech_profiles_table.py  4de5f6f25974_initial_schema.py  89fd91bb3b28_decision_subject_ticket_title.py  9c98056f21af_referential_cache_group_routing.py  bd3925c6ece6_audit_tables_llm_calls_decisions.py  c1a7e4b2_ts_timezone_aware.py  cb8ffef4f8f3_referential_cache_profile_column.py  d2f8a9c5_processed_tickets_ts_aware.py  e52d59bbdccb_execution_modes_per_entity.py
scripts/: glpi_diagnose.py  spike_routing.py
src/itsm_modern_ai/: __init__.py  admin_setup.py  main.py  plugins.py  spike_tech_profiles.py
tests/: conftest.py
tests/fixtures/: tech_profiles_fr.yaml  tickets_fr.json
tests/integration/: test_api_config.py  test_audit_auth_api.py  test_automations_api.py  test_debug_api.py  test_feature_guard.py  test_glpi_connector.py  test_glpi_v2_connector.py  test_license_api.py  test_llm_anthropic.py  test_llm_openai.py  test_metrics_endpoint.py  test_privacy_cost_api.py  test_referentials_api.py  test_sandbox_api.py  (+4 more)
(+183 files in other folders)
