[project]
name = "itsm-modern-ai"
version = "0.9.45"
description = "Assistant IA de triage de tickets GLPI — moteur à garde-fous (pilote V1)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "apscheduler>=3.10,<4",
    "cryptography>=42.0",
    "pwdlib[argon2]>=0.2",
    "itsdangerous>=2.2",
    "prometheus-client>=0.20",
    # anyio : importé DIRECTEMENT (adapters/ssrf.py, services/triage.py) — on ne dépend
    # pas de sa seule présence transitive via starlette/httpx.
    "anyio>=4.4",
]

[project.optional-dependencies]
# PostgreSQL (Beta — cf. https://docs.itsm-modern-ai.com/) — driver psycopg 3. Optionnel : l'install
# SQLite par défaut n'embarque PAS ce driver. `uv sync --extra postgres` pour l'activer.
postgres = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/itsm_modern_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
src = ["src", "tests", "scripts"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008 : `Depends(...)` en valeur par défaut est l'idiome FastAPI.
ignore = ["B008"]
